--- a/APP/estilo_1.css
+++ b/APP/estilo_1.css
@@ -31,6 +31,12 @@ width: 300px;
 height: 138px;
 
 }
+#loginLogo{
+border-top-right-radius: 10px;
+-moz-border-radius-topright: 10px;
+border-bottom-left-radius: 10px;
+-moz-border-radius-bottomleft: 10px;
+}
 #autentificacion{
 width:612px;
 height:53px;
@@ -38,7 +44,7 @@ padding-top: 30px;
 padding-left: 20px;
 
 position: relative;
-left: 80%;
+left: 56em;
 bottom: 132px;
 
 }
@@ -247,7 +253,7 @@ font-size: 12;
   background: #095c80;
 }
 #cssmenu{
-	margin-top: 9%;
+	margin-top: 10em;
 }
 
 /*---------------------------------------------------------------------------------------------------------------------------*/
